fix: re-organize z-index and update docs

--- a/packages/components/bolt-card-replacement/src/card-replacement-background/_card-replacement-background.scss
+++ b/packages/components/bolt-card-replacement/src/card-replacement-background/_card-replacement-background.scss
@@ -11,14 +11,6 @@ bolt-card-replacement-background {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
-  overflow: hidden;
-  pointer-events: none;
-  border-radius: 4px;
-
-  [rounded] & {
-    @include bolt-border-radius(large);
-  }
 
   & + bolt-card-replacement-body {
     margin-bottom: auto;
@@ -27,11 +19,13 @@ bolt-card-replacement-background {
 
 .c-bolt-card_replacement__background {
   position: relative;
-  z-index: 1;
+  z-index: $bolt-card-replacement-z-index-background;
   width: 100%;
   height: 100%;
   overflow: hidden;
-  border-radius: 4px;
+  pointer-events: none;
+  user-select: none;
+  border-radius: $bolt-card-replacement-border-radius;
 
   [rounded] & {
     @include bolt-border-radius(large);
