--- a/packages/components/bolt-card-replacement/src/card-replacement-media/_card-replacement-media.scss
+++ b/packages/components/bolt-card-replacement/src/card-replacement-media/_card-replacement-media.scss
@@ -46,5 +46,5 @@ bolt-card-replacement-media {
 
 .c-bolt-card_replacement__media--video {
   position: relative;
-  z-index: $bolt-card-replacement-video-z-index;
+  z-index: $bolt-card-replacement-z-index-inner-link;
 }
