--- a/packages/components/bolt-card-replacement/src/card-replacement/card-replacement.scss
+++ b/packages/components/bolt-card-replacement/src/card-replacement/card-replacement.scss
@@ -139,3 +139,11 @@ bolt-card-replacement {
   flex-grow: 1;
   flex-shrink: 1;
 }
+
+// This catches all links and button inside the card (inner links) and increases their z-index to make them higher than the outer link. Reference the _card-replacement-settings-and-tools.scss to see the full stacking order.
+@include bolt-repeat-rule(
+  ('::slotted(bolt-link)', 'bolt-link', '::slotted(bolt-button)', 'bolt-button')
+) {
+  position: relative;
+  z-index: $bolt-card-replacement-z-index-inner-link;
+}
